--- a/ch1/naver.html
+++ b/ch1/naver.html
@@ -18,7 +18,29 @@
             <button> 검색</button>
         </fieldset>
         
+        <ul><!--unordered list--> <!--ol은 ordered list-->
+            <li>메일</li>
+            <li>카페</li>
+            <li>블로그</li>
+            <li>지식인</li>
+            <li>쇼핑</li>
+            <li>네이버페이</li>
+            <li>네이버쇼핑</li>
+        </ul>
+        
         <h2>실시간 검색어</h2>
+        <h3>연합뉴스</h3>
+        <ol>
+            <li>충격_ 제로초 지금 목아파..</li>
+            <li>속보_ 방송 종료하고 싶어</li>
+            <li>중대발표 : 다음 강좌 언제 될지 모르겠다.</li>
+        </ol>
+        <h3>언론사 목록</h3>
+        <ul>
+            <li><img src="./이데일리.png" alt="이데일리"></li>
+            <li><img src="./디지털타임스.png" alt="디지털타임스"></li>
+        </ul>
+        <b>굵게</b>
         <h3>로그인</h3>
         <h3>뉴스</h3>
         <h3>법률</h3>
