css와 선택자, 가운데정렬

--- a/ch2/naver.html
+++ b/ch2/naver.html
@@ -4,20 +4,25 @@
         <meta charset="utf-8" />
         <title>네이버</title>
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?1" />
+        <link rel="stylesheet" href="./naver.css">
     </head>
     <body>
         <header>
-            <h1>
-                <a href="https://www.naver.com">네이버</a>
-                <!-- 주석(comment)입니다 -->
-                <!-- 속성(attribute)입니다 -->
-            </h1>
-            <h2>검색창</h2>
-            <fieldset>
-                <legend>검색</legend>
-                <input />
-                <button> 검색</button>
-            </fieldset>
+            <div id="header-center"><!--가운데 정렬용 div-->
+                <!--속성명 : 속성값 ; 속성명2 : 속성값2;-->
+                <!--인라인 스타일;-->
+                <h1>
+                    <a href="https://www.naver.com">네이버</a>
+                    <!-- 주석(comment)입니다 -->
+                    <!-- 속성(attribute)입니다 -->
+                </h1>
+                <h2>검색창</h2>
+                <fieldset>
+                    <legend>검색</legend>
+                    <input />
+                    <button> 검색</button>
+                </fieldset>
+            </div>
         <header>
         <nav>
             <ul><!--unordered list--> <!--ol은 ordered list-->
