픽셀과 자식/자손 선택자, display

--- a/ch2/naver.html
+++ b/ch2/naver.html
@@ -11,17 +11,25 @@
             <div id="header-center"><!--가운데 정렬용 div-->
                 <!--속성명 : 속성값 ; 속성명2 : 속성값2;-->
                 <!--인라인 스타일;-->
-                <h1>
-                    <a href="https://www.naver.com">네이버</a>
-                    <!-- 주석(comment)입니다 -->
-                    <!-- 속성(attribute)입니다 -->
-                </h1>
-                <h2>검색창</h2>
-                <fieldset>
-                    <legend>검색</legend>
-                    <input />
-                    <button> 검색</button>
-                </fieldset>
+                <div>
+                    <span>네이버를 시작페이지로<span>
+                    <span>쥬니어네이버<span>
+                    <span>해피빈<span>
+                    <!--display가 기본으로 inline이다-->
+                </div>
+                <div id="header-search">
+                    <h1>
+                        <a href="https://www.naver.com">네이버</a>
+                        <!-- 주석(comment)입니다 -->
+                        <!-- 속성(attribute)입니다 -->
+                    </h1>
+                    <h2>검색창</h2>
+                    <fieldset>
+                        <legend>검색</legend>
+                        <input />
+                        <button> 검색</button>
+                    </fieldset>
+                </div>
             </div>
         <header>
         <nav>
