--- a/ch3/naver.html
+++ b/ch3/naver.html
@@ -19,15 +19,15 @@
                 </div>
                 <div id="header-search">
                     <h1>
-                        <a href="https://www.naver.com">네이버</a>
+                        <a href="https://www.naver.com" class="blind">네이버</a>
                         <!-- 주석(comment)입니다 -->
                         <!-- 속성(attribute)입니다 -->
                     </h1>
-                    <h2>검색창</h2>
+                    <h2 class="blind">검색창</h2>
                     <fieldset>
-                        <legend>검색</legend>
+                        <legend class="blind">검색</legend>
                         <input />
-                        <button> 검색</button>
+                        <button class="blind"> 검색</button>
                     </fieldset>
                 </div>
             </div>
@@ -47,14 +47,30 @@
             <h2>실시간 검색어</h2>
             <h3>연합뉴스</h3>
             <ol>
-                <li>충격_ 제로초 지금 목아파..</li>
-                <li>속보_ 방송 종료하고 싶어</li>
+                <li>충격) 제로초 지금 목아파..</li>
+                <li>속보) 방송 종료하고 싶어</li>
                 <li>중대발표 : 다음 강좌 언제 될지 모르겠다.</li>
             </ol>
             <h3>언론사 목록</h3>
             <ul>
-                <li><img src="./이데일리.png" alt="이데일리"></li>
-                <li><img src="./디지털타임스.png" alt="디지털타임스"></li>
+                <li><img src="./과학동아.png" alt="과학동아" /></li>
+                <li><img src="./한국일보.png" alt="한국일보" /></li>
+                <li><img src="./osen.png" alt="osen" /></li>
+                <li><img src="./매일경제.png" alt="매일경제" /></li>
+                <li><img src="./파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+                <li><img src="./한국경제TV.png" alt="한국경제TV" /></li>
+                <li><img src="./과학동아.png" alt="과학동아" /></li>
+                <li><img src="./한국일보.png" alt="한국일보" /></li>
+                <li><img src="./osen.png" alt="osen" /></li>
+                <li><img src="./매일경제.png" alt="매일경제" /></li>
+                <li><img src="./파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+                <li><img src="./한국경제TV.png" alt="한국경제TV" /></li>
+                <li><img src="./과학동아.png" alt="과학동아" /></li>
+                <li><img src="./한국일보.png" alt="한국일보" /></li>
+                <li><img src="./osen.png" alt="osen" /></li>
+                <li><img src="./매일경제.png" alt="매일경제" /></li>
+                <li><img src="./파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+                <li><img src="./한국경제TV.png" alt="한국경제TV" /></li>
             </ul>
             <h3>로그인</h3>
             <h3>뉴스</h3>
