백그라운드와 박스 모델

--- a/ch3/naver.html
+++ b/ch3/naver.html
@@ -18,11 +18,13 @@
                     <!--display가 기본으로 inline이다-->
                 </div>
                 <div id="header-search">
-                    <h1>
-                        <a href="https://www.naver.com" class="blind">네이버</a>
-                        <!-- 주석(comment)입니다 -->
-                        <!-- 속성(attribute)입니다 -->
-                    </h1>
+                    <a href="https://www.naver.com">
+                        <h1>
+                            <span>네이버</span>
+                            <!-- 주석(comment)입니다 -->
+                            <!-- 속성(attribute)입니다 -->
+                        </h1>
+                    </a>
                     <h2 class="blind">검색창</h2>
                     <fieldset>
                         <legend class="blind">검색</legend>
