검색창 만들기, position을 이용한 배치

--- a/ch3/naver.html
+++ b/ch3/naver.html
@@ -29,7 +29,10 @@
                     <fieldset>
                         <legend class="blind">검색</legend>
                         <input />
-                        <button class="blind"> 검색</button>
+                        <button>
+                            <span class="blind">검색</span>
+                            <span id="search-image"></span>
+                        </button>
                     </fieldset>
                 </div>
             </div>
